--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.31.0",
     "eslint-plugin-react": "^7.32.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.14.1"
   }
 }
