--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "swiper": "^8.4.5"
   },
   "devDependencies": {
+    "@types/google-map-react": "^2.1.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
