--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
     "sass": "^1.57.1",
-    "swiper": "^8.4.5"
+    "swiper": "^8.4.5",
+    "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.7",
