--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vite-plugin-compression": "^0.5.1"
   },
   "devDependencies": {
+    "@tormak/vite-plugin-sitemap": "^1.1.18",
     "@types/google-map-react": "^2.1.7",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
