--- a/package.json
+++ b/package.json
@@ -9,24 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "google-map-react": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.6.2",
+    "react-router-dom": "^6.7.0",
     "sass": "^1.57.1",
-    "swiper": "^8.4.5",
-    "vite-plugin-compression": "^0.5.1"
+    "swiper": "^8.4.6"
   },
   "devDependencies": {
     "@tormak/vite-plugin-sitemap": "^1.1.18",
     "@types/google-map-react": "^2.1.7",
-    "@types/react": "^18.0.26",
+    "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.0",
-    "eslint": "^8.31.0",
-    "eslint-plugin-react": "^7.32.0",
+    "eslint": "^8.32.0",
+    "eslint-plugin-react": "^7.32.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vite-plugin-pwa": "^0.14.1"
